research: refactor to present JBR as the chosen tech stack
Restructured research-alternative.md with Option D (Kotlin/Compose + JBR)
as the single chosen stack. Clearly documents:
- The macOS polling problem with evidence trail
- Why JBR solves it (FSEvents WatchService)
- Legal analysis (GPL-2.0 + Classpath Exception)
- Full tech stack table
- Risks and mitigations
- Rejected alternatives (Tauri, vanilla OpenJDK, hybrid FFM) with rationale

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>